fix(Create): Fixed pose setting and adjusted pose menu z-index

--- a/src/styles/workshop/create/page.module.css
+++ b/src/styles/workshop/create/page.module.css
@@ -30,7 +30,7 @@
     width: 400px;
     height: 500px;
     position: relative;
-    z-index: 1;
+    z-index: 3;
     border-radius: 10px;
     border: 1px var(--main-element-color) solid;
     box-sizing: border-box;
@@ -46,7 +46,7 @@
     position: relative;
     top: -10px;
     border: 1px var(--main-element-color) solid;
-    z-index: 0;
+    z-index: 2;
     padding-top: calc(1rem + 10px);
     display: flex;
     flex-direction: column;
